--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -510,7 +510,7 @@ body {
 }
 
 .header__form {
-  max-width: 20rem;
+  min-width: 5rem;
   height: 3.25rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -525,6 +525,10 @@ body {
   -webkit-box-shadow: 0 0.2rem 1.5rem rgba(25, 25, 31, 0.225);
           box-shadow: 0 0.2rem 1.5rem rgba(25, 25, 31, 0.225);
   margin-left: 1rem;
+}
+
+.header__form:hover {
+  max-width: 30rem;
 }
 
 .header__form--input, .header__form--btn {
@@ -568,6 +572,15 @@ body {
   -webkit-box-flex: 5;
       -ms-flex-positive: 5;
           flex-grow: 5;
+  max-width: 5rem;
+  -webkit-transition: .4s all ease;
+  transition: .4s all ease;
+  -webkit-box-shadow: inset 0 0 1rem rgba(25, 25, 31, 0.1);
+          box-shadow: inset 0 0 1rem rgba(25, 25, 31, 0.1);
+}
+
+.header__form--input:hover {
+  max-width: 10rem;
 }
 
 .header__form--input::-webkit-input-placeholder {
@@ -592,6 +605,7 @@ body {
 
 .header__form--input:focus {
   background-color: rgba(240, 240, 240, 0.5);
+  max-width: 17.5rem;
 }
 
 .header__form--btn {
