--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -467,7 +467,7 @@ body {
     }
 
     &__form {
-        max-width: 20rem;
+        min-width: 5rem;
         height: 3.25rem;
         display: flex;
         align-items: center;
@@ -475,6 +475,10 @@ body {
         border-radius: 1rem;
         box-shadow: 0 0.2rem 1.5rem rgba($black, 0.225);
         margin-left: 1rem;
+
+        &:hover {
+            max-width: 30rem;
+        }
 
         &--input,
         &--btn {
@@ -513,6 +517,13 @@ body {
             transition: 0.5s all ease;
             height: 100%;
             flex-grow: 5;
+            max-width: 5rem;
+            transition: .4s all ease;
+            box-shadow: inset 0 0 1rem rgba($black, 0.1);
+
+            &:hover {
+                max-width: 10rem;
+            }
 
             &::placeholder {
                 opacity: 0.5;
@@ -521,6 +532,8 @@ body {
 
             &:focus {
                 background-color: rgba($white, 0.5);
+                max-width: 17.5rem;
+
             }
         }
 
