--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -761,4 +761,9 @@ body {
     width: 100%;
     display: flex;
     justify-content: center;
+    // border-left: #3eaf56 solid 1rem;
+    // border-right: #3eaf56 solid 1rem;
+}
+
+.swiper-wrapper {
 }
