--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
 	<script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/places.js@1.16.4"></script>
-	<script src="assets/js/algolia.js"></script>
+	<script src="/assets/js/algolia.js"></script>
 	<script src="https://kit.fontawesome.com/77faf95db4.js"></script>
 	<script src="/assets/js/main.js"></script>
 </body>
