--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,17 +2,17 @@
     <div class="logo-container">
         <h3 class="logo">Pic<span class="orange-text">ki</span></h3>
     </div>
-    <div class="nav-expand">
+    {{!-- <div class="nav-expand">
         <svg class="nav-burger" style="width:24px;height:24px" viewBox="0 0 24 24">
             <path fill="#e1e1e1" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
         </svg>
-    </div>
-    <div class="nav-container">
+    </div> --}}
+    {{!-- <div class="nav-container">
         <nav class="nav">
             <a href="#skills" class="nav-item">How It Works</a>
             <a href="#contact" class="nav-item">Contact</a>
         </nav>
-    </div>
+    </div> --}}
     <div class="waves">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="svg-wave" id="wave1">
             <filter id="dropshadow" height="130%">
